--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 plugins {
-  id 'java'
+    id 'java'
+    id 'application'
 }
 
 group 'com.github.mikehearn'
-version '1'
+version '2'
+
+mainClassName = 'hello.Hello'
